--- a/Flx2.html
+++ b/Flx2.html
@@ -12,17 +12,70 @@
 
 <body>
     <div class="main_area">
+
         <div class="title">
             <h2>Hellow IBRAHIM</h2>
         </div>
 
         <div class="main">
+
+            <div class="main_extra extra4">
+
+                <div class="child">
+                </div>
+
+            </div>
+
+            <div class="main_extra extra3">
+
+                <div class="child">
+                </div>
+
+                <div class="child">
+                </div>
+
+                <div class="child">
+                </div>
+
+                <div class="child">
+                </div>
+
+                <div class="child">
+                </div>
+
+                <div class="child">
+                </div>
+
+                <div class="child">
+                </div>
+
+                <div class="child">
+                </div>
+
+            </div>
+
+            <div class="main_extra">
+
+                <div class="child">
+                    <h3> 1 </h3>
+                </div>
+
+                <div class="child">
+                    <p> </p>
+                </div>
+
+                <div class="child">
+                    Data entry is error
+                </div>
+            </div>
+
+
             <div class="child">
-                <h3>SHEIKH MOHAMMED IBRAHIM</h3>
+                <h3> 1 SHEIKH MOHAMMED IBRAHIM</h3>
                 <p>
                     Data Entry is Error. Please Enter correct Data. Data Entry is Error.
                     Please Enter correct Data.
-                </p>
+                </p> <br>
 
                 <a href="Read More"> Read More</a>
                 <br />
@@ -30,42 +83,47 @@
             </div>
 
             <div class="child">
-                <h3>SHEIKH MOHAMMED IBRAHIM</h3>
+                <h3>2 SHEIKH MOHAMMED IBRAHIM</h3>
                 <p>
                     Data Entry is Error. Please Enter correct Data. Data Entry is Error.
-                    Please Enter correct Data.
-                </p>
-                <a href="Read More"> Read More</a>
+                    Please Enter correct Data. <br>
+                </p> <br>
+                <a href="Read More"> Read More</a><br />
+                <br />
             </div>
 
             <div class="child">
-                <h3>SHEIKH MOHAMMED IBRAHIM</h3>
+                <h3>3 SHEIKH MOHAMMED IBRAHIM</h3>
                 <p>
                     Data Entry is Error. Please Enter correct Data. Data Entry is Error.
-                    Please Enter correct Data.
-                </p>
-                <a href="Read More"> Read More</a>
+                    Please Enter correct Data.<br>
+                </p> <br>
+                <a href="Read More"> Read More</a><br />
+                <br />
             </div>
 
             <div class="child">
-                <h3>SHEIKH MOHAMMED IBRAHIM</h3>
+                <h3>4 SHEIKH MOHAMMED IBRAHIM</h3>
                 <p>
                     Data Entry is Error. Please Enter correct Data. Data Entry is Error.
-                    Please Enter correct Data.
-                </p>
-                <a href="Read More"> Read More</a>
+                    Please Enter correct Data. <br>
+                </p> <br>
+                <a href="Read More"> Read More</a><br />
+                <br />
             </div>
 
             <div class="child">
-                <h3>SHEIKH MOHAMMED IBRAHIM</h3>
+                <h3>5 SHEIKH MOHAMMED IBRAHIM</h3>
                 <p>
                     Data Entry is Error. Please Enter correct Data. Data Entry is Error.
-                    Please Enter correct Data.
-                </p>
-                <a href="Read More"> Read More</a>
+                    Please Enter correct Data. <br>
+                </p> <br>
+                <a href="Read More"> Read More</a><br />
+                <br />
             </div>
+
+
         </div>
-    </div>
 </body>
 
 </html>
