--- a/Flx0.html
+++ b/Flx0.html
@@ -7,14 +7,10 @@
     <meta name="description" content="HTML Test Page" />
     <meta name="keywords" content="HTML, Test, Page" />
     <meta name="author" content="John Doe" />
-
-
-    <link rel="stylesheet" href="Flx2.css" />
-
+    <link rel="stylesheet" href="Flx0.css" />
 </head>
 
 <body>
-
     <div class="main_area">
 
         <div class="title">
@@ -22,6 +18,58 @@
         </div>
 
         <div class="main">
+
+            <div class="main_extra extra4">
+
+                <div class="child">
+
+                </div>
+
+            </div>
+
+            <div class="main_extra extra3">
+
+                <div class="child">
+                </div>
+
+                <div class="child">
+                </div>
+
+                <div class="child">
+                </div>
+
+                <div class="child">
+                </div>
+
+                <div class="child">
+                </div>
+
+                <div class="child">
+                </div>
+
+                <div class="child">
+                </div>
+
+                <div class="child">
+                </div>
+
+            </div>
+
+            <div class="main_extra">
+
+                <div class="child">
+                    <h3> 1 </h3>
+                </div>
+
+                <div class="child">
+                    <p> </p>
+                </div>
+
+                <div class="child">
+                    Data entry is error
+                </div>
+            </div>
+
 
             <div class="child">
                 <h3> 1 SHEIKH MOHAMMED IBRAHIM</h3>
@@ -34,7 +82,6 @@
                 <br />
                 <br />
             </div>
-
 
             <div class="child">
                 <h3>2 SHEIKH MOHAMMED IBRAHIM</h3>
@@ -76,10 +123,8 @@
                 <br />
             </div>
 
+
         </div>
-
-    </div>
-
 </body>
 
 </html>
